fix: show save button on mobile

--- a/dashboard/app/styles/_button.scss
+++ b/dashboard/app/styles/_button.scss
@@ -20,6 +20,9 @@ button {
   &.save {
     background: $gardengreen;
     display: none;
+    &.showonmobile {
+      display: block !important;
+    }
     @media #{$desktop} {
       display: block;
     }
